приведены в порядок ноутбуки

--- a/notebooks/initial_analysis_and_visualization.ipynb
+++ b/notebooks/initial_analysis_and_visualization.ipynb
@@ -23,6 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Формулировка на простом языке:** \n",
+    "> Познакомиться с данными. Визуализировать станции велопроката на карте городе Сиэтл.\n",
+    "\n",
+    "**Формулировка на математическом языке:**\n",
+    "> Загрузить и изучить представленные данные. Построить гистограммы по информациям о поездках(продолжительность, пол пользователя, его тип и т.д.), нанести станции на карту города. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -80,6 +91,15 @@
    "outputs": [],
    "source": [
     "stations_data = pd.read_csv(DATA_DIR+\"station.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations_data.shape"
    ]
   },
   {
@@ -1971,7 +1991,24 @@
     }
    ],
    "source": [
-    "trips = pd.read_csv(DATA_DIR+\"trip.csv\", error_bad_lines=False)\n",
+    "trips = pd.read_csv(DATA_DIR+\"trip.csv\", error_bad_lines=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trips.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trips.head(3)"
    ]
   },
@@ -2439,7 +2476,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ничего особенного здесь не представлено, достаточно много данных о погоде за каждый день."
+    "Ничего особенного здесь не представлено, достаточно много данных о погоде за каждый день ,включая сред. температуру, влажность, скорость ветра и т.д."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Выводы:**\n",
+    "* Станции велопроката оказались расположены лишь в нескольких районах города Сиэтл, при этом некоторые из них уже выведены из работы. \n",
+    "* Распределение пользователей велопроката в зависимости от пола/статуса подписки неравномерное. \n",
+    "* Большинство людей пользуется велосипедом менее получаса, то есть совершаются преимущественно короткие поездки."
    ]
   },
   {
@@ -2454,9 +2501,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mipt-stats] *",
+   "display_name": "Python [conda env:root]",
    "language": "python",
-   "name": "conda-env-mipt-stats-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2468,7 +2515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "varInspector": {
    "cols": {
