--- a/notebooks/predictions_lin_reg_elastic.ipynb
+++ b/notebooks/predictions_lin_reg_elastic.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:16:39.236279Z",
-     "start_time": "2020-05-09T14:16:29.299524Z"
+     "end_time": "2020-05-22T10:50:29.767918Z",
+     "start_time": "2020-05-22T10:50:28.574079Z"
     }
    },
    "outputs": [],
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:16:39.253729Z",
-     "start_time": "2020-05-09T14:16:39.245276Z"
+     "end_time": "2020-05-22T10:50:29.842423Z",
+     "start_time": "2020-05-22T10:50:29.836184Z"
     }
    },
    "outputs": [],
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:16:39.344210Z",
-     "start_time": "2020-05-09T14:16:39.262018Z"
+     "end_time": "2020-05-22T10:50:30.021546Z",
+     "start_time": "2020-05-22T10:50:29.872645Z"
     },
     "code_folding": [
      0
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:16:39.553941Z",
-     "start_time": "2020-05-09T14:16:39.346800Z"
+     "end_time": "2020-05-22T10:50:30.148674Z",
+     "start_time": "2020-05-22T10:50:30.053532Z"
     }
    },
    "outputs": [],
@@ -118,11 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:27.924833Z",
-     "start_time": "2020-05-09T14:16:39.563734Z"
+     "end_time": "2020-05-22T10:51:21.155808Z",
+     "start_time": "2020-05-22T10:50:30.181961Z"
     }
    },
    "outputs": [
@@ -333,7 +333,7 @@
        "4                   8                    3              0.14   Rain  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:28.863547Z",
-     "start_time": "2020-05-09T14:17:27.928064Z"
+     "end_time": "2020-05-22T10:51:21.232758Z",
+     "start_time": "2020-05-22T10:51:21.218349Z"
     }
    },
    "outputs": [],
@@ -371,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:29.424588Z",
-     "start_time": "2020-05-09T14:17:28.866447Z"
+     "end_time": "2020-05-22T10:51:21.374061Z",
+     "start_time": "2020-05-22T10:51:21.294683Z"
     }
    },
    "outputs": [],
@@ -395,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:29.907842Z",
-     "start_time": "2020-05-09T14:17:29.428997Z"
+     "end_time": "2020-05-22T10:51:21.558282Z",
+     "start_time": "2020-05-22T10:51:21.553537Z"
     }
    },
    "outputs": [
@@ -409,7 +409,7 @@
        "((551, 28), (138, 28))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,11 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:30.091966Z",
-     "start_time": "2020-05-09T14:17:29.910877Z"
+     "end_time": "2020-05-22T10:51:21.749138Z",
+     "start_time": "2020-05-22T10:51:21.744157Z"
     }
    },
    "outputs": [],
@@ -436,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:30.217099Z",
-     "start_time": "2020-05-09T14:17:30.094348Z"
+     "end_time": "2020-05-22T10:51:22.220267Z",
+     "start_time": "2020-05-22T10:51:22.214849Z"
     }
    },
    "outputs": [],
@@ -453,11 +453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:30.299390Z",
-     "start_time": "2020-05-09T14:17:30.219766Z"
+     "end_time": "2020-05-22T10:51:22.382722Z",
+     "start_time": "2020-05-22T10:51:22.379019Z"
     }
    },
    "outputs": [],
@@ -467,11 +467,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:17:30.437598Z",
-     "start_time": "2020-05-09T14:17:30.302263Z"
+     "end_time": "2020-05-22T10:51:22.539599Z",
+     "start_time": "2020-05-22T10:51:22.534050Z"
     }
    },
    "outputs": [],
@@ -486,11 +486,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:20:00.780544Z",
-     "start_time": "2020-05-09T14:17:30.440311Z"
+     "end_time": "2020-05-22T10:54:23.697268Z",
+     "start_time": "2020-05-22T10:51:22.730937Z"
     }
    },
    "outputs": [
@@ -506,13 +506,16 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:   17.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   21.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 1556 tasks      | elapsed:   32.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 6084 tasks      | elapsed:   53.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 11924 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=-1)]: Done 19044 tasks      | elapsed:  2.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 25000 out of 25000 | elapsed:  2.5min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    3.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:    9.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 872 tasks      | elapsed:   18.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 3136 tasks      | elapsed:   33.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 6056 tasks      | elapsed:   54.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 9616 tasks      | elapsed:  1.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 13832 tasks      | elapsed:  1.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 18688 tasks      | elapsed:  2.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 24200 tasks      | elapsed:  2.9min\n",
+      "[Parallel(n_jobs=-1)]: Done 25000 out of 25000 | elapsed:  3.0min finished\n"
      ]
     },
     {
@@ -542,7 +545,7 @@
        "             scoring='neg_mean_squared_error', verbose=2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,11 +556,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-09T14:20:01.113450Z",
-     "start_time": "2020-05-09T14:20:00.867747Z"
+     "end_time": "2020-05-22T10:54:23.868066Z",
+     "start_time": "2020-05-22T10:54:23.860147Z"
     }
    },
    "outputs": [
@@ -567,13 +570,53 @@
        "75.65636238907558"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "root_mean_squared_error(y_test, gs.best_estimator_.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T10:50:20.429906Z",
+     "start_time": "2020-05-22T10:50:20.415456Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    return np.mean(np.abs((y_true - y_pred) / y_true)) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-22T10:54:24.043071Z",
+     "start_time": "2020-05-22T10:54:24.032239Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.550110148977645"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_percentage_error(y_test, gs.best_estimator_.predict(X_test))"
    ]
   },
   {
@@ -585,7 +628,7 @@
     }
    },
    "source": [
-    "Получили результат близкий к тем, что мы получали у CatBoost/RandomForest, но все таки хуже, хотя мы и применял подбор параметров."
+    "Получили результат близкий к тем, что мы получали у CatBoost/RandomForest, при этом MAPE оказывается меньше."
    ]
   }
  ],
